Fix Mate logo (why did Github lose it?)

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ figcaption {
 <div class="row">
     <div class="col">
       <figure>
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
+        <img src="https://user-images.githubusercontent.com/2692138/233097615-dfd42ef6-c811-49a9-9bfd-4a86373911f0.png"></a>
         <figcaption>GeckoLinux </br> <em>Static</em> </br> Mate
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/154.220822/GeckoLinux_STATIC_Mate.x86_64-154.220822.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
         </figcaption>
@@ -251,7 +251,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
     </div>
     <div class="col">
       <figure>
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
+        <img src="https://user-images.githubusercontent.com/2692138/233097615-dfd42ef6-c811-49a9-9bfd-4a86373911f0.png"></a>
         <figcaption>GeckoLinux </br> <em>Rolling</em> </br> Mate
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.220820/GeckoLinux_ROLLING_Mate.x86_64-999.220820.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
