--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>GeckoLinux - Linux for Detail-Oriented Geckos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="GeckoLinux is a set of Linux spins built from the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop. It is available in Static (based on openSUSE Leap) and Rolling (based on openSUSE Tumbleweed) editions">
+    <meta name="description" content="GeckoLinux is a set of Linux spins built from the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop.">
     <meta name="keywords" content="geckolinux, opensuse based distro, opensuse based distribution">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -33,7 +33,7 @@
 
 <h3><a id="welcome-to-geckolinux" class="anchor" href="#welcome-to-geckolinux" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GeckoLinux</h3>
 
-<p>GeckoLinux is a set of Linux spins built from the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop. It is available in <em>Static</em> (based on openSUSE Leap) and <em>Rolling</em> (based on openSUSE Tumbleweed) editions.</p>
+<p>GeckoLinux is a set of Linux spins built from the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop.</p>
 
 <ul class="slideshow">
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11381655/3dfa5bc2-92cb-11e5-8dd8-d3a14144a5f1.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11381655/3dfa5bc2-92cb-11e5-8dd8-d3a14144a5f1.png" title="GeckoLinux Cinnamon edition" alt="&nbsp;" width="100%"></a></li>
@@ -80,7 +80,7 @@
 <h4><a id="how-different" class="anchor" href="#how-different" aria-hidden="true"><span class="octicon octicon-link"></span></a>How Is This Different From openSUSE?</h4>
 
 <ul>
-<li>GeckoLinux comes as an offline installable live DVD / USB image for <em>Static</em> and <em>Rolling</em> editions, whereas openSUSE has a non-live DVD / USB installer, a net-installer image, or Tumbleweed live DVD / USB with net-installer options.</li>
+<li>GeckoLinux comes as an offline installable live DVD / USB image, whereas openSUSE has a non-live DVD / USB installer, a net-installer image, or live DVD / USB with net-installer options.</li>
 <li>GeckoLinux offers customized editions optimized for different desktop environments, whereas openSUSE requires the user to know how to install patterns and packages for different desktop environments.</li>
 <li>GeckoLinux comes pre-installed with common niceties such as proprietary media codecs, whereas openSUSE for legal reasons requires users to know how to add additional repositories and which packages to add.</li>
 <li>GeckoLinux prefers packages from the Packman repo when they are available, whereas some of openSUSE's default packages don't work with patent-restricted features even if the features are installed from other sources.</li>
@@ -92,114 +92,10 @@
 
 <h3><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h3>
 
-<h4><a id="download-static" class="anchor" href="#download-static" aria-hidden="true"></a></a>GeckoLinux <em>Static</em> editions:</h4>
-<p>
-GeckoLinux <em>Static</em> editions are based on openSUSE Leap 15.4 with its periodic release cycle and a long support lifetime. 
-<a href="#download-rolling">Looking for the rolling release?</a>
-</p>
-
-<h5>
-	<p>
-		<strong>Notice: </strong>Please verify your download checksums by clicking the &nbsp; <strong><em>i</em></strong> &nbsp; icon next to your download in the 
-		<a href="https://sourceforge.net/projects/geckolinux/files/Static/154.220822/">Sourceforge directory listing</a>.
-	</p>
-</h5>
-
-<style>
-@media(min-width:30em){.row{width:100%;display:table;table-layout:fixed}.col{display:table-cell}}
-figure { 
-  display: table;
-}
-figcaption { 
-  display: table-caption;
-  caption-side: bottom;
-  text-align: center;
-  font-size: 70%;
-  font-weight: bold;
-</style>
-
-
-<div class="row">
-    <div class="col">
-      <figure>
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
-        <figcaption>GeckoLinux </br> <em>Static</em> </br> Cinnamon
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/154.220822/GeckoLinux_STATIC_Cinnamon.x86_64-154.220822.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-
-        </figcaption>
-      </figure>
-    </div>
-    <div class="col">
-      <figure>
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
-        <figcaption>GeckoLinux </br> <em>Static</em> </br> XFCE
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/154.220822/GeckoLinux_STATIC_XFCE.x86_64-154.220822.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-
-        </figcaption>
-      </figure>
-    </div>
-    <div class="col">
-      <figure>
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11734338/69d405e8-9f84-11e5-9559-1b4b0f0d0d8f.png"></a>
-        <figcaption>GeckoLinux </br> <em>Static</em> </br> Gnome
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/154.220822/GeckoLinux_STATIC_Gnome.x86_64-154.220822.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-
-        </figcaption>
-      </figure>
-    </div>
-   <div class="col">
-      <figure>
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
-        <figcaption>GeckoLinux </br> <em>Static</em> </br> Plasma
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/154.220822/GeckoLinux_STATIC_Plasma.x86_64-154.220822.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-
-        </figcaption>
-      </figure>
-    </div>
-</div>
-<div class="row">
-    <div class="col">
-      <figure>
-        <img src="https://user-images.githubusercontent.com/2692138/233097615-dfd42ef6-c811-49a9-9bfd-4a86373911f0.png"></a>
-        <figcaption>GeckoLinux </br> <em>Static</em> </br> Mate
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/154.220822/GeckoLinux_STATIC_Mate.x86_64-154.220822.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-        </figcaption>
-      </figure>
-    </div>
-    <div class="col">
-      <figure>
-        <img src="https://user-images.githubusercontent.com/2692138/91643419-b1100600-e9f8-11ea-92b1-9a9f885585bb.png"></a>
-        <figcaption>GeckoLinux </br> <em>STATIC</em> </br> Budgie
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/154.220822/GeckoLinux_STATIC_Budgie.x86_64-154.220822.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-
-        </figcaption>
-      </figure>
-    </div>
-    <div class="col">
-      <figure>
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11956434/2d5f7982-a888-11e5-9d25-5cd86a5028af.png"></a>
-        <figcaption>GeckoLinux </br> <em>Static</em> </br> LXQt
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/154.220822/GeckoLinux_STATIC_LXQt.x86_64-154.220822.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-        </figcaption>
-      </figure>
-    </div>
-    <div class="col">
-      <figure>
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
-        <figcaption>GeckoLinux </br> <em>Static</em> </br> "Barebones"
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/154.220822/GeckoLinux_STATIC_BareBones.x86_64-154.220822.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-        </figcaption>
-      </figure>
-    </div>
-
-</div>
-
-
 
 <h4><a id="download-rolling" class="anchor" href="#download-rolling" aria-hidden="true"></a></a>GeckoLinux <em>Rolling</em> editions:</h4>
 <p>
-GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its frequent and extremely well tested stable rolling releases. 
-<a href="#download-static">Looking for the static release?</a>
+GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its frequent and well tested rolling releases.
 </p>
 
 <h5>
@@ -298,45 +194,6 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
     </div>
 </div>
 
-<h4><a id="download-next" class="anchor" href="#download-next" aria-hidden="true"></a></a>GeckoLinux <em>NEXT</em> editions:</h4>
-<p>
-GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined with additional OBS repositories to offer the latest version of popular desktop environments.
-(Looking for the <a href="#download-static"> static release</a> or the <a href="#download-rolling"> rolling release</a>?)
-</p>
-
-
-<h5>
-	<p>
-		<strong>Notice: </strong>Please verify your download checksums by clicking the &nbsp; <strong><em>i</em></strong> &nbsp; icon next to your download in the 
-		<a href="https://sourceforge.net/projects/geckolinux/files/NEXT/">Sourceforge directory listing</a>.
-	</p>
-</h5>
-
-<div class="row">
-
-    <div class="col">
-      <figure>
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
-        <figcaption>GeckoLinux <em>NEXT</em> Plasma</br>
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/GeckoLinux_NEXT_Plasma.x86_64-154.220827.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-
-        </figcaption>
-      </figure>
-    </div>
-
-    <div class="col"> 
-      <figure>
-        <img src="https://user-images.githubusercontent.com/2692138/91384122-75f0b580-e7f3-11ea-8757-a353efa596e8.png"></a>
-        <figcaption>GeckoLinux <em>NEXT</em> Pantheon</br>
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/GeckoLinux_NEXT_Pantheon.x86_64-153.220105.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-
-        </figcaption>
-      </figure>
-    </div>
-
-    <div class="col"> &nbsp; </div>
-
-</div>
 
 
 <h3><a id="who" class="anchor" href="#who" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who Are You?</h3>
