--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
 
 <h3><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h3>
 
-
 <h4><a id="download-rolling" class="anchor" href="#download-rolling" aria-hidden="true"></a></a>GeckoLinux <em>Rolling</em> editions:</h4>
 <p>
 GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its frequent and well tested rolling releases.
@@ -105,7 +104,18 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
 	</p>
 </h5>
 
-
+<style>
+@media(min-width:30em){.row{width:100%;display:table;table-layout:fixed}.col{display:table-cell}}
+figure { 
+  display: table;
+}
+figcaption { 
+  display: table-caption;
+  caption-side: bottom;
+  text-align: center;
+  font-size: 70%;
+  font-weight: bold;
+</style>
 <div class="row">
     <div class="col">
       <figure>
